# nn-framework

./: .gitignore  01-windows-cmake-debug.bat  01-windows-cmake.bat  02-windows-cmake-release.bat  03-windows-build-run-debug.bat  04-windows-build-run-release.bat  CMakeLists.txt  README.md  windows-build-run-debug.bat
.github/workflows/: semgrep.yml
nn-framework/: coordinates_test.cu  coordinates_test.hh  main.cu  mnist.cu
nn-framework/cudas/cost_functions/: CrossEntropy.cu  MSEcost.cu
nn-framework/cudas/layers/: linear_layer.cu  relu_activation.cu  sigmoid_activation.cu  softmax_activation.cu  tanh_activation.cu
nn-framework/cudas/optimizers/: adam.cu  gradient.cu  gradientDescentOptimizer.cu
nn-framework/cudas/regularization/: L2.cu
nn-framework/cudas/structures/: dimensions.cu  matrix.cu  neural_network.cu
nn-framework/headers/cost_functions/: CrossEntropy.hh  MSEcost.hh  cost_function.hh
nn-framework/headers/layers/: linear_layer.hh  nn_layer.hh  relu_activation.hh  sigmoid_activation.hh  softmax_activation.hh  tanh_activation.hh
nn-framework/headers/optimizers/: adam.hh  gradient.hh  gradientDescentOptimizer.hh  optimizer.hh
nn-framework/headers/regularization/: L2.hh  regularization.hh
nn-framework/headers/structures/: MSEcost.hh  dimensions.hh  matrix.hh  neural_network.hh
nn-framework/mnist/: mnist.hh
nn-framework/utils/: error_check_cuda.cu  error_check_cuda.hpp
